--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <h1>About me</h1>
     <div class="about-content fadein">
       <div class="about-img">
-        <img src="渚くんイラスト_アートボード 1 のコピー.jpg">
+        <img src="nagisa-profile.jpg">
         <p>速水　渚</p>
       </div>
       <div class="about-p">
