--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
       </div>
       <div class="about-p">
         <p>現在、大学を休学して、
-        湘南にある住人全員がweb系フリーランスの
-        シェアハウスに住んでいます。
+        湘南にあるシェアハウスに住んでいます。
         大学では、工学部に所属しており専攻は土木です。
         <span>独学で、HTML&CSS、Javascript、
         php(wordpress)を触っています。</span></p>
